--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                   value="Send Message"
                   class="btn btn-primary py-3 px-5"
                 />
-                <input type="hidden" name="_next" value="//srimanthula sahith" />
+                <input type="hidden" name="_next" value="//anishreddy" />
               </div>
             </form>
           </div>
@@ -747,7 +747,7 @@
                 </li> -->
                 <li class="ftco-animate">
                   <a
-                  href="https://www.instagram.com/anish___reddy?igsh=eHRjcXNoc3BtNmdq&utm_source=qr"
+                  href="https://www.instagram.com/anish_______reddy?igsh=eHRjcXNoc3BtNmdq&utm_source=qr"
                   target="_blank"
                   ><span class="icon-instagram"></span></a>
                 </li>
